Fix link points aligning

--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -81,7 +81,7 @@
   justify-content: right;
 
   padding-right: 25px;
-  gap: 10px;
+  gap: 5px;
 }
 
 .project-number span{
