--- a/styles/pages/project.css
+++ b/styles/pages/project.css
@@ -121,6 +121,7 @@
 .links p {
   width: auto;
   
+  line-height: 0.95;
   white-space: nowrap;
 }
 
@@ -133,11 +134,13 @@
 }
 
 .project-info span {
-  position: absolute;
   margin-left: -15px;
 
-  line-height: 1.35;
+  position: absolute;
   pointer-events: none;
+
+  line-height: 0.75;
+
   opacity: 0;
 }
 
